# infectious-cpp

./: .clang-tidy  CMakeLists.txt  LICENSE  Makefile  README.md  SConstruct  addmul.c  addmul.cpp  addmul.h  berlekamp_welch.cpp  clang-tidy  fec.hpp  gf_alg.hpp  math.cpp  math.hpp  slice.hpp  tables.h
include/infectious/: build_env.h  fec.hpp  slice.hpp
lib/: addmul.cpp  addmul.hpp  berlekamp_welch.cpp  berlekamp_welch_test.cpp  common.hpp  fec.hpp  fec_test.cpp  gf_alg.hpp  gf_alg_test.cpp  gfval.hpp  math.cpp  math.hpp  slice.hpp  tables.hpp
src/: CMakeLists.txt  SConscript  addmul.cpp  addmul_sse2.cpp  addmul_vperm.cpp  berlekamp_welch.cpp  cpuid.cpp  cpuid.hpp  cpuid_aarch64.cpp  cpuid_arm32.cpp  cpuid_ppc.cpp  cpuid_x86.cpp  fec.cpp  gf_alg.hpp  os_utils.cpp  os_utils.hpp  simd_32.hpp
tests/: CMakeLists.txt  berlekamp_welch_test.cpp  fec_test.cpp  gf_alg_test.cpp  random_env.hpp  test_main.cpp  test_zfec.cpp  zfec_compat_test.cpp
utils/: generate_tables.c
